@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.457 2006/06/09 15:24:32 minskim Exp $
+$NetBSD: CHANGES-2006,v 1.458 2006/06/09 16:45:40 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -2968,3 +2968,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Added sysutils/munin-server version 1.3.1 [he 2006-06-08]
 	Updated devel/glib to 1.2.10nb10 [tron 2006-06-08]
 	Updated audio/libsidplay2 to 2.1.1nb1 [minskim 2006-06-09]
+	Updated pkgtools/pkg_chk to 1.75 [abs 2006-06-08]
